tests/js/invalid/export/only-top-level.buri
-- @export decorators can only be applied to top-level declarations

@export
item = if #true do
    @export
    a = 3
    a